// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UuJokesCore.Joke.Provider addRating 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 3,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "joke-with-image-1",
      "image": "image-1",
      "imageFile": undefined,
      "imageUrl": "http://localhost/123",
      "name": "Test joke",
      "ratingCount": 6,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": false,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;

exports[`UuJokesCore.Joke.Provider loads joke with image 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "joke-with-image-1",
      "image": "image-1",
      "imageFile": undefined,
      "imageUrl": "http://localhost/123",
      "name": "Test joke",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": false,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;

exports[`UuJokesCore.Joke.Provider reads data through children as a function 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "joke-1",
      "name": "Test joke",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": false,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;

exports[`UuJokesCore.Joke.Provider reads data throw context 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "joke-1",
      "name": "Test joke",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": false,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;

exports[`UuJokesCore.Joke.Provider reload with error: children 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "joke-1",
      "name": "Test joke",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": false,
    },
    "errorData": Object {
      "data": undefined,
      "dtoIn": undefined,
      "error": [Error: Test reload with error],
      "operation": "load",
    },
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "error",
  },
}
`;

exports[`UuJokesCore.Joke.Provider reload with error: logger 1`] = `
Array [
  "Error while reloading data.",
  [Error: Test reload with error],
]
`;

exports[`UuJokesCore.Joke.Provider renders component without required oid property: children 1`] = `
Object {
  "jokeDataObject": Object {
    "data": null,
    "errorData": Object {
      "data": undefined,
      "dtoIn": undefined,
      "error": [NoOidError: The required property oid is not defined!],
      "operation": "load",
    },
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "errorNoData",
  },
}
`;

exports[`UuJokesCore.Joke.Provider rerenders component with different oid 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "another-joke-1",
      "name": "Test joke",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": false,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;

exports[`UuJokesCore.Joke.Provider updates joke 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "7",
        "8",
      ],
      "id": "joke-with-image-1",
      "image": "456",
      "imageFile": "456",
      "imageUrl": "http://localhost/123",
      "name": "New name",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "New text",
      "visibility": false,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;

exports[`UuJokesCore.Joke.Provider updates visibility 1`] = `
Object {
  "jokeDataObject": Object {
    "data": Object {
      "averageRating": 2.5,
      "categoryIdList": Array [
        "1",
        "2",
      ],
      "id": "joke-with-image-1",
      "image": "image-1",
      "imageFile": undefined,
      "imageUrl": "http://localhost/123",
      "name": "Test joke",
      "ratingCount": 5,
      "sys": Object {
        "cts": "2020-01-01T00:00:00.000Z",
      },
      "text": "Best joke ever",
      "visibility": true,
    },
    "errorData": null,
    "handlerMap": Object {
      "addRating": [Function],
      "load": [Function],
      "setData": [Function],
      "update": [Function],
      "updateVisibility": [Function],
    },
    "pendingData": null,
    "state": "ready",
  },
}
`;
